# ethereum-casper-ffg-proof

./: .clang-format  CMakeLists.txt
cmake/: toolchain-zkllvm.cmake
include/ethereum/consensus_proof/: bls.hpp  consensus_proof.hpp  constants.hpp  hash_to_field.hpp  poseidon.hpp  ssz.hpp
include/ethereum/consensus_proof/pairing/: bigint.hpp  bigint_func.hpp  bls12_381_func.hpp  bls12_381_hash_to_G2.hpp  bls_signature.hpp  curve.hpp  curve_fp2.hpp  extra_curve.hpp  extra_field_circuits.hpp  field_elements_func.hpp  final_exp.hpp  fp.hpp  fp12.hpp  fp12_func.hpp  fp2.hpp  pairing.hpp
include/ethereum/sync_committee/: constants.hpp  hash_to_field.hpp  inputs.hpp  ssz.hpp  sync_committee.hpp
src/: bls.cpp  hash_to_field.cpp  inputs.cpp  poseidon.cpp  rotate.cpp  ssz.cpp  step.cpp  sync_committee.cpp
src/pairing/: bigint.cpp  bigint_func.cpp  bls12_381_func.cpp  bls12_381_hash_to_G2.cpp  bls_signature.cpp  curve.cpp  curve_fp2.cpp  extra_curve.cpp  extra_field_circuits.cpp  field_elements_func.cpp  final_exp.cpp  fp.cpp  fp12.cpp  fp12_func.cpp  fp2.cpp  pairing.cpp
